[1.541] update links to FAQ13 - faq/index.html

--- a/faq/index.html
+++ b/faq/index.html
@@ -165,20 +165,19 @@ OpenBSD, так и <a href="http://www.openbsd.org/cgi-bin/man.cgi">онлайн
 <li><a href="faq11.html#CustomizingX">Настройка X</a>
 </ul>
 
-<h3><a href="https://www.openbsd.org/faq/faq13.html">Мультимедия</a></h3>
+<h3><a href="faq13.html">Мультимедия</a></h3>
 <ul>
-<li><a href="https://www.openbsd.org/faq/faq13.html#confaudio"  >Конфигурация аудио-устройств</a>
-<li><a href="https://www.openbsd.org/faq/faq13.html#playaudio"  >Воспроизведение различных типов аудио</a>
-<li><a href="https://www.openbsd.org/faq/faq13.html#playCD"     >Воспроизведение аудио-CD</a>
-<li><a href="https://www.openbsd.org/faq/faq13.html#recordaudio">Запись аудио</a>
-<li><a href="https://www.openbsd.org/faq/faq13.html#recordmon"  >Recording a Monitor Mix of All Audio
-                                     Playback</a>
-<li><a href="https://www.openbsd.org/faq/faq13.html#audioserver">OpenBSD's Audio Server (sndiod)</a>
-<li><a href="https://www.openbsd.org/faq/faq13.html#audioprob"  >Отрадка проблем с аудио</a>
-<li><a href="https://www.openbsd.org/faq/faq13.html#midi"       >Использование MIDI-инструментов</a>
-<li><a href="https://www.openbsd.org/faq/faq13.html#playDVD"    >Воспроизведение DVD</a>
-<li><a href="https://www.openbsd.org/faq/faq13.html#burnCD"     >Запись CD и DVD</a>
-<li><a href="https://www.openbsd.org/faq/faq13.html#plugins"    >Плагины для браузера (Java и Flash)</a>
+<li><a href="faq13.html#confaudio"  >Конфигурация аудио устройств</a>
+<li><a href="faq13.html#playaudio"  >Воспроизведение различных форматов аудио</a>
+<li><a href="faq13.html#playCD"     >Воспроизведение аудио CD</a>
+<li><a href="faq13.html#recordaudio">Запись аудио</a>
+<li><a href="faq13.html#recordmon"  >Recording a Monitor Mix of All Audio Playback</a>
+<li><a href="faq13.html#audioserver">Аудио-сервер OpenBSD (sndiod)</a>
+<li><a href="faq13.html#audioprob"  >Отрадка проблем со звуком</a>
+<li><a href="faq13.html#midi"       >Использование MIDI инструментов</a>
+<li><a href="faq13.html#playDVD"    >Воспроизведение DVD</a>
+<li><a href="faq13.html#burnCD"     >Запись CD и DVD</a>
+<li><a href="faq13.html#plugins"    >Плагины для браузера (Java и Flash)</a>
 </ul>
 
 <h3><a href="faq16.html">Виртуализация</a></h3>
