--- a/opensmtpd/index.html
+++ b/opensmtpd/index.html
@@ -29,11 +29,8 @@
 
       <h1>Для других ОС</h1>
       <ul>
-        <li><a href="portable.html">Linux</a>
-        <li><a href="portable.html">NetBSD</a>
-        <li><a href="portable.html">FreeBSD</a>
-        <li><a href="portable.html">DragonFlyBSD</a>
-        <li><a href="portable.html">Mac OS X</a>
+        <li><a href="portable.html">Портированная версия</a>
+        <li><a href="https://github.com/OpenSMTPD/OpenSMTPD/">Github</a>
       </ul>
 
     <td>
@@ -42,12 +39,11 @@
       </h1>
 
       <p id="callout">
-        Релиз <a href="https://opensmtpd.org/announces/release-6.4.1.txt">OpenSMTPD 6.4</a>
-        состоялся 16 декабря 2018 года (последнее minor обновление: 2 августа 2019)<br>
-        <a href="https://www.opensmtpd.org/archives/opensmtpd-6.4.2.tar.gz">OpenBSD версия</a>
-        [<a href="https://www.opensmtpd.org/archives/opensmtpd-6.4.2.sum.sig">sha256</a>] &ndash;
-        <a href="https://www.opensmtpd.org/archives/opensmtpd-6.4.2p1.tar.gz">Портированная версия</a>
-        [<a href="https://www.opensmtpd.org/archives/opensmtpd-6.4.2p1.sum.sig">sha256</a>]
+        <a href="announces/release-6.6.0.txt">OpenSMTPD 6.6</a> вышла 26 октября 2019 года<br>
+        <a href="https://www.opensmtpd.org/archives/opensmtpd-6.6.0.tar.gz">OpenBSD версия</a>
+       [<a href="https://www.opensmtpd.org/archives/opensmtpd-6.6.0.sum.sig">sha256</a>] &ndash;
+	      <a href="https://www.opensmtpd.org/archives/opensmtpd-6.6.0p1.tar.gz">Портированная версия</a>
+       [<a href="https://www.opensmtpd.org/archives/opensmtpd-6.6.0p1.sum.sig">sha256</a>]
 
 <p>
 OpenSMTPD представляет из себя <strong>СВОБОДНУЮ</strong> реализацию серверной
@@ -61,9 +57,9 @@ OpenSMTPD представляет из себя <strong>СВОБОДНУЮ</str
 представляет из себя достаточно полную реализацию протокола SMTP.
 
 <p>
-OpenSMTPD разрабатывается Жилем Хеаде (Gilles Chehade), Эриком Форотом (Eric Faurot),
-Чарли Лонго (Charles Longeau) и Зунилом Ниммагадда (Sunil Nimmagadda), а также
-другими хакерами <a href="https://openbsd-ru.github.io">OpenBSD</a>.
+OpenSMTPD разрабатывается Жилем Хеаде (Gilles Chehade) и Эриком Форотом (Eric Faurot),
+а также другими хакерами <a href="https://openbsd-ru.github.io">OpenBSD</a> и участниками
+других сообществ.
 
 <p>
 OpenSMTPD является частью <a href="https://openbsd-ru.github.io">проекта OpenBSD</a>.
