[1.57] fix broken link - opensmtpd/index.html

--- a/opensmtpd/index.html
+++ b/opensmtpd/index.html
@@ -39,7 +39,8 @@
       </h1>
 
       <p id="callout">
-        <a href="announces/release-6.6.0.txt">OpenSMTPD 6.6</a> вышла 26 октября 2019 года<br>
+        <a href="https://www.opensmtpd.org/announces/release-6.6.0.txt">OpenSMTPD 6.6</a>
+        вышла 26 октября 2019 года<br>
         <a href="https://www.opensmtpd.org/archives/opensmtpd-6.6.0.tar.gz">OpenBSD версия</a>
        [<a href="https://www.opensmtpd.org/archives/opensmtpd-6.6.0.sum.sig">sha256</a>] &ndash;
 	      <a href="https://www.opensmtpd.org/archives/opensmtpd-6.6.0p1.tar.gz">Портированная версия</a>
