[1.541] update link for 'report' and 'current' pages

--- a/faq/index.html
+++ b/faq/index.html
@@ -34,19 +34,19 @@ OpenBSD, так и <a href="http://www.openbsd.org/cgi-bin/man.cgi">онлайн
 
 <table>
   <tr>
-    <td><a href="https://www.openbsd.org/faq/faq10.html#Patches" >Обновления безопасности</a></td>
-    <td><a href="https://man.openbsd.org"                        >man-cтраницы</a></td>
-    <td><a href="ports/index.html"                               >Книга по портам</a></td>
+    <td><a href="faq10.html#Patches"                        >Обновления безопасности</a></td>
+    <td><a href="https://man.openbsd.org"                   >man-cтраницы</a></td>
+    <td><a href="ports/index.html"                          >Книга по портам</a></td>
   </tr>
   <tr>
-    <td><a href="https://www.openbsd.org/faq/upgrade66.html"     >Обновление до 6.6</a></td>
-    <td><a href="../mail.html"                                   >Почтовые рассылки</a></td>
-    <td><a href="ports/testing.html"                             >Тестирование портов</a></td>
+    <td><a href="https://www.openbsd.org/faq/upgrade66.html">Обновление до 6.6</a></td>
+    <td><a href="../mail.html"                              >Почтовые рассылки</a></td>
+    <td><a href="ports/testing.html"                        >Тестирование портов</a></td>
   </tr>
   <tr>
-    <td><a href="current.html"                                   >Использование -current</a></td>
-    <td><a href="https://www.openbsd.org/report.html"            >Сообщить об ошибке</a></td>
-    <td><a href="pf/index.html"                                  >PF руководство</a></td>
+    <td><a href="https://openbsd.org/faq/current.html"      >Использование -current</a></td>
+    <td><a href="../report.html"                            >Сообщить об ошибке</a></td>
+    <td><a href="pf/index.html"                             >PF руководство</a></td>
   </tr>
 </table>
 
