[1.52] language and fix broken links - report.html

--- a/report.html
+++ b/report.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang=en>
+<html lang=ru>
 <meta charset=utf-8>
 
 <title>OpenBSD: Отчёты об ошибках</title>
@@ -31,7 +31,7 @@ h3 {
 <ol>
  <li>Во-первых, проверьте <a href="errata.html">наличие исправлений и заметок, касающихся выпуска</a>.
  <li>Затем выясните, есть ли более новая версия.
- <li>Наконец, проверьте наличие <a href="plus.html">изменений между версиями OpenBSD</a>.
+ <li>Наконец, проверьте наличие <a href="https://www.openbsd.org/plus.html">изменений между версиями OpenBSD</a>.
 </ol>
 
 <p>
@@ -52,7 +52,7 @@ h3 {
 	 и обычно несколько раз в день с разными архитектурами.
  <li>Remember that the <a href="anoncvs.html">AnonCVS</a> servers are
      updated a few hours behind the actual working source tree.
- <li>Check for <a href="plus.html">changes made between OpenBSD versions</a>
+ <li>Check for <a href="https://www.openbsd.org/plus.html">changes made between OpenBSD versions</a>
      to see if the problem has been addressed.
  <li>Much care is made in creating snapshots.
      Sometimes mistakes are made, and our apologies are extended.
@@ -182,4 +182,4 @@ h3 {
 Для отладки некоторых проблем у нас должно быть оборудование, которое имеет
 проблему.
 Пожалуйста, помните, что ресурсы проекта OpenBSD ограничены.
-Вы <a href="want.html">пожертвовать некоторое оборудование</a>.
+Вы <a href="https://www.openbsd.org/want.html">пожертвовать некоторое оборудование</a>.
