[1.563] sync - openssh/portable.html

--- a/openssh/portable.html
+++ b/openssh/portable.html
@@ -237,13 +237,6 @@ Historical versions are available in the <em>old/</em> directory.
 	</td>
     </tr><tr>
 	<td>
-	<strong>Germany (Berlin)</strong>
-	</td><td>
-	<a href="https://ftp.spline.de/pub/OpenBSD/OpenSSH/portable/" rel="nofollow">
-	https://ftp.spline.de/pub/OpenBSD/OpenSSH/portable/</a>
-	</td>
-    </tr><tr>
-	<td>
 	<strong>Germany (Esslingen)</strong>
 	</td><td>
 	<a href="https://mirror.hs-esslingen.de/pub/OpenBSD/OpenSSH/portable/" rel="nofollow">
@@ -304,6 +297,13 @@ Historical versions are available in the <em>old/</em> directory.
 	</td><td>
 	<a href="https://ftp.fsn.hu/pub/OpenBSD/OpenSSH/portable/" rel="nofollow">
 	https://ftp.fsn.hu/pub/OpenBSD/OpenSSH/portable/</a>
+	</td>
+    </tr><tr>
+	<td>
+	<strong>Indonesia</strong>
+	</td><td>
+	<a href="https://mirror.labkom.id/pub/OpenBSD/OpenSSH/portable/" rel="nofollow">
+	https://mirror.labkom.id/pub/OpenBSD/OpenSSH/portable/</a>
 	</td>
     </tr><tr>
 	<td>
@@ -405,6 +405,13 @@ Historical versions are available in the <em>old/</em> directory.
 	</td>
     </tr><tr>
 	<td>
+	<strong>Sweden (Sk&ouml;vde)</strong>
+	</td><td>
+	<a href="https://mirror.linux.pizza/pub/OpenBSD/OpenSSH/portable/" rel="nofollow">
+	https://mirror.linux.pizza/pub/OpenBSD/OpenSSH/portable/</a>
+	</td>
+    </tr><tr>
+	<td>
 	<strong>Switzerland (Linthal, GL)</strong>
 	</td><td>
 	<a href="https://mirror.ungleich.ch/pub/OpenBSD/OpenSSH/portable/" rel="nofollow">
@@ -433,24 +440,10 @@ Historical versions are available in the <em>old/</em> directory.
 	</td>
     </tr><tr>
 	<td>
-	<strong>United Kingdom (London)</strong>
-	</td><td>
-	<a href="https://mirror.exonetric.net/pub/OpenBSD/OpenSSH/portable/" rel="nofollow">
-	https://mirror.exonetric.net/pub/OpenBSD/OpenSSH/portable/</a>
-	</td>
-    </tr><tr>
-	<td>
 	<strong>USA (San Francisco, CA)</strong>
 	</td><td>
 	<a href="https://mirrors.sonic.net/pub/OpenBSD/OpenSSH/portable/" rel="nofollow">
 	https://mirrors.sonic.net/pub/OpenBSD/OpenSSH/portable/</a>
-	</td>
-    </tr><tr>
-	<td>
-	<strong>USA (Boise, ID)</strong>
-	</td><td>
-	<a href="https://mirrors.syringanetworks.net/pub/OpenBSD/OpenSSH/portable/" rel="nofollow">
-	https://mirrors.syringanetworks.net/pub/OpenBSD/OpenSSH/portable/</a>
 	</td>
     </tr><tr>
 	<td>
@@ -495,13 +488,6 @@ Historical versions are available in the <em>old/</em> directory.
 	</td><td>
 	<a href="http://mirror.internode.on.net/pub/OpenBSD/OpenSSH/portable/" rel="nofollow">
 	http://mirror.internode.on.net/pub/OpenBSD/OpenSSH/portable/</a>
-	</td>
-    </tr><tr>
-	<td>
-	<strong>Brazil (Brasilia)</strong>
-	</td><td>
-	<a href="http://mirrors.unb.br/pub/OpenBSD/OpenSSH/portable/" rel="nofollow">
-	http://mirrors.unb.br/pub/OpenBSD/OpenSSH/portable/</a>
 	</td>
     </tr><tr>
 	<td>
@@ -575,6 +561,20 @@ Historical versions are available in the <em>old/</em> directory.
 	</td>
     </tr><tr>
 	<td>
+	<strong>United Kingdom (London)</strong>
+	</td><td>
+	<a href="http://mirror.exonetric.net/pub/OpenBSD/OpenSSH/portable/" rel="nofollow">
+	http://mirror.exonetric.net/pub/OpenBSD/OpenSSH/portable/</a>
+	</td>
+    </tr><tr>
+	<td>
+	<strong>USA (Boise, ID)</strong>
+	</td><td>
+	<a href="http://mirrors.syringanetworks.net/pub/OpenBSD/OpenSSH/portable/" rel="nofollow">
+	http://mirrors.syringanetworks.net/pub/OpenBSD/OpenSSH/portable/</a>
+	</td>
+    </tr><tr>
+	<td>
 	<strong>USA (Cambridge, MA)</strong>
 	</td><td>
 	<a href="http://mirrors.mit.edu/pub/OpenBSD/OpenSSH/portable/" rel="nofollow">
@@ -619,13 +619,6 @@ Historical versions are available in the <i>old/</i> directory.
 	</td><td>
 	<a href="ftp://openbsd.c3sl.ufpr.br/pub/OpenBSD/OpenSSH/portable/" rel="nofollow">
 	ftp://openbsd.c3sl.ufpr.br/pub/OpenBSD/OpenSSH/portable/</a>
-	</td>
-    </tr><tr>
-	<td>
-	<strong>Brazil (Brasilia)</strong>
-	</td><td>
-	<a href="ftp://mirrors.unb.br/pub/OpenBSD/OpenSSH/portable/" rel="nofollow">
-	ftp://mirrors.unb.br/pub/OpenBSD/OpenSSH/portable/</a>
 	</td>
     </tr><tr>
 	<td>
@@ -682,13 +675,6 @@ Historical versions are available in the <i>old/</i> directory.
 	</td><td>
 	<a href="ftp://ftp.irisa.fr/pub/OpenBSD/OpenSSH/portable/" rel="nofollow">
 	ftp://ftp.irisa.fr/pub/OpenBSD/OpenSSH/portable/</a>
-	</td>
-    </tr><tr>
-	<td>
-	<strong>Germany (Berlin)</strong>
-	</td><td>
-	<a href="ftp://ftp.spline.de/pub/OpenBSD/OpenSSH/portable/" rel="nofollow">
-	ftp://ftp.spline.de/pub/OpenBSD/OpenSSH/portable/</a>
 	</td>
     </tr><tr>
 	<td>
@@ -993,12 +979,6 @@ This is a list of currently known rsync mirrors:
 	</td>
     </tr><tr>
 	<td>
-	<strong>Germany (Berlin)</strong>
-	</td><td>
-	rsync://ftp.spline.de/OpenBSD/OpenSSH/portable/
-	</td>
-    </tr><tr>
-	<td>
 	<strong>Germany (Aachen)</strong>
 	</td><td>
 	rsync://ftp.halifax.rwth-aachen.de/openbsd/OpenSSH/portable/
@@ -1020,6 +1000,12 @@ This is a list of currently known rsync mirrors:
 	<strong>Indonesia (Surabaya, Java)</strong>
 	</td><td>
 	rsync://kartolo.sby.datautama.net.id/OpenBSD/OpenSSH/portable/
+	</td>
+    </tr><tr>
+	<td>
+	<strong>Indonesia</strong>
+	</td><td>
+	rsync://mirror.labkom.id/openbsd/OpenSSH/portable/
 	</td>
     </tr><tr>
 	<td>
@@ -1110,6 +1096,12 @@ This is a list of currently known rsync mirrors:
 	<strong>Romania (Bucharest)</strong>
 	</td><td>
 	rsync://mirrors.pidginhost.com/OpenBSD/OpenSSH/portable/
+	</td>
+    </tr><tr>
+	<td>
+	<strong>Sweden (Sk&ouml;vde)</strong>
+	</td><td>
+	rsync://mirror.linux.pizza/mirror/openbsd/OpenSSH/portable/
 	</td>
     </tr><tr>
 	<td>
