[1.443] sync - security.html

--- a/security.html
+++ b/security.html
@@ -71,7 +71,8 @@ h3 {
 <a href="https://openbsd.org/errata62.html">6.2</a>,
 <a href="https://openbsd.org/errata63.html">6.3</a>,
 <a href="https://openbsd.org/errata64.html">6.4</a>,
-<a href="https://openbsd.org/errata65.html">6.5</a>.
+<a href="https://openbsd.org/errata65.html">6.5</a>,
+<a href="https://openbsd.org/errata66.html">6.6</a>.
 <br>
 <hr>
 
