[1.65] comma-fix - config.html

--- a/faq/pf/config.html
+++ b/faq/pf/config.html
@@ -103,12 +103,12 @@ PF считывает свою конфигурацию из файла
   <a href="https://www.openbsd.org/faq/pf/rdr.html">перенаправления трафика</a>.
 </ul>
 
-Пустые строки игнорируются, а строки начинающиеся с <code>#</code> воспринимаются
+Пустые строки игнорируются, а строки, начинающиеся с <code>#</code>, воспринимаются
 как комментарии.
 
 <h2 id="control">Управление</h2>
 
-После загрузки, пакетом PF можно управлять используя программу
+После загрузки, пакетом PF можно управлять, используя программу
 <a href="https://man.openbsd.org/pfctl">pfctl(8)</a>.
 Некоторые примеры команд:
 
