[1.65] fix broken links - faq/pf/config.html

--- a/faq/pf/config.html
+++ b/faq/pf/config.html
@@ -5,7 +5,7 @@
      on a new line, and try to keep the general formatting consistent
      with the rest of the pages -->
 
-<title>OpenBSD PF: Getting Started</title>
+<title>OpenBSD PF: Начало работы</title>
 <meta charset=utf-8>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" type="text/css" href="../../openbsd.css">
@@ -34,7 +34,7 @@ PERFORMANCE OF THIS DOCUMENTATION
 <i>Open</i><b>BSD</b></a>
 PF - Начало Работы
 <small>
-<a href="index.html">[Содержание]</a>
+<a href="index.html">[FAQ PF - На главную]</a>
 </small>
 </h2>
 <hr>
@@ -90,15 +90,15 @@ PF считывает свою конфигурацию из файла
 <code>pf.conf</code> состоит из нескольких частей:
 
 <ul>
-  <li><b><a href="macros.html">Макросы:</a></b> Пользовательские переменные, 
-    которые могут содержать IP-адреса, имена интерфейсов и т.д.
-  <li><b><a href="tables.html">Таблицы:</a></b> Структура, используемая 
-    для хранения списков IP-адресов.
-  <li><b><a href="options.html">Опции:</a></b> Различные опции 
-    контроля работы PF. 
-  <li><b><a href="filter.html">Правила Фильтрации:</a></b> Разрешают выборочную фильтрацию или блокировку пакетов 
-    при их прохождении через любой из интерфейсов.
-    Правилам фильтрации могут быть заданы параметры для указания
+  <li><b><a href="https://www.openbsd.org/faq/pf/macros.html">Макросы:</a></b>
+    Пользовательские переменные, которые могут содержать IP-адреса, имена интерфейсов и т.д.
+  <li><b><a href="https://www.openbsd.org/faq/pf/tables.html">Таблицы:</a></b>
+    Структура, используемая для хранения списков IP-адресов.
+  <li><b><a href="https://www.openbsd.org/faq/pf/options.html">Опции:</a></b>
+    Различные опции контроля работы PF.
+  <li><b><a href="https://www.openbsd.org/faq/pf/filter.html">Правила Фильтрации:</a></b>
+    Разрешают выборочную фильтрацию или блокировку пакетов при их прохождении через любой из
+    интерфейсов. Правилам фильтрации могут быть заданы параметры для указания
   <a href="https://www.openbsd.org/faq/pf/nat.html">преобразования сетевых адресов</a> и
   <a href="https://www.openbsd.org/faq/pf/rdr.html">перенаправления трафика</a>.
 </ul>
