[1.89] update link to config.html - faq/pf/index.html

--- a/faq/pf/index.html
+++ b/faq/pf/index.html
@@ -43,7 +43,7 @@ PF: Пакетный фильтр OpenBSD
 <ul>
 <li>Основная настройка
 	<ul>
-	<li><a href="https://openbsd.org/faq/pf/config.html">Введение</a>
+	<li><a href="config.html">Начинаем работать с PF</a>
 	<li><a href="https://openbsd.org/faq/pf/macros.html">Списки и макросы</a>
 	<li><a href="https://openbsd.org/faq/pf/tables.html">Таблицы</a>
 	<li><a href="https://openbsd.org/faq/pf/filter.html">Фильтрация пакетов</a>
