[1.54] fix broken link - faq/ports/ports.html

--- a/faq/ports/ports.html
+++ b/faq/ports/ports.html
@@ -741,6 +741,6 @@ They are listed below, by increasing order of difficulty.
 </ul>
 
 <p>
-<a href="../../want.html">Hardware</a> donations can assist
+<a href="https://www.openbsd.org/want.html">Hardware</a> donations can assist
 testing ports on the various <a href="../../plat.html">platforms</a>
 OpenBSD runs on.
