[1.349] update links - openssh/index.html

--- a/openssh/index.html
+++ b/openssh/index.html
@@ -14,10 +14,10 @@
       <h1>Проект OpenSSH</h1>
       <ul>
         <li><a href="goals.html">Цели проекта</a>
-        <li><a href="https://www.openssh.com/releasenotes.html">Информация о выпусках</a>
+        <li><a href="https://www.openssh.com/releasenotes.html">Release Notes</a>
         <li><a href="history.html">История</a>
         <li><a href="features.html">Возможности</a>
-        <li><a href="https://www.openssh.com/security.html">Безопасность</a>
+        <li><a href="security.html">Безопасность</a>
         <li><a href="specs.html">Спецификации</a>
         <li><a href="users.html">Пользователи</a>
       </ul>
@@ -32,8 +32,8 @@
 
       <h1>Для OpenBSD</h1>
       <ul>
-        <li><a href="https://www.openssh.com/openbsd.html">FTP</a>
-        <li><a href="https://openbsd-ru.github.io/anoncvs.html">AnonCVS</a>
+        <li><a href="openbsd.html">FTP</a>
+        <li><a href="../anoncvs.html">AnonCVS</a>
         <li><a href="https://cvsweb.openbsd.org/src/usr.bin/ssh">CVSWeb</a>
       </ul>
 
