--- a/openssh/security.html
+++ b/openssh/security.html
@@ -1,8 +1,8 @@
 <!doctype html>
-<html lang=en>
+<html lang=ru>
 <meta charset=utf-8>
 
-<title>OpenSSH: Security</title>
+<title>OpenSSH: Безопасность</title>
 <meta name="description" content="OpenSSH advisories">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" type="text/css" href="openbsd.css">
@@ -17,21 +17,22 @@ li {
 <h2 id=OpenBSD>
 <a href="/">
 <i>Open</i><b>SSH</b></a>
-Security
+Безопасность
 </h2>
 <hr>
 
 <p>
-OpenSSH is developed with the same rigorous security process that the
-OpenBSD group is famous for. If you wish to report a security issue in
-OpenSSH, please contact the private developers list &lt;<a href="mailto:openssh@openssh.com">openssh@openssh.com</a>&gt;.
+OpenSSH разрабатывается по тем же принципам и с требованиями к
+безопасности, которыми так славится OpenBSD. Если вы хотите сообщить
+об ошибке, отправьте письмо в private рассылку разработчиков
+ &lt;<a href="mailto:openssh@openssh.com">openssh@openssh.com</a>&gt;.
 
 <p>
-For more information, see the
-<a href="https://www.openbsd.org/security.html">OpenBSD security page</a>.
+Более подробную информацию можно найти на странице, посвященной
+<a href="../security.html">безопасности OpenBSD</a>.
 
 <ul>
-<li><p><b>October 3, 2017</b><br>
+<li><p><b>3 октября 2017</b><br>
     All version of OpenSSH prior to 7.6 supporting read-only mode in sftp-server
     (introduced in 5.5).
     Incorrect open(2) flags in sftp-server permitted creation
@@ -40,9 +41,9 @@ For more information, see the
     <br>
     This bug is corrected in OpenSSH 7.6.
     For more information, please refer to the
-    <a href="txt/release-7.6">release notes</a>.
+    <a href="https://www.openssh.com/txt/release-7.6">release notes</a>.
 
-<li><p><b>March 9, 2016</b><br>
+<li><p><b>9 марта 2016</b><br>
     All versions of OpenSSH prior to 7.2p2 with X11Forwarding
     enabled.
     Missing sanitisation of untrusted input allows an
@@ -52,13 +53,13 @@ For more information, see the
     Mitigate by setting <b>X11Forwarding=no</b> in sshd_config, or on the
     commandline. This is the default, but some vendors enable the feature.
     <p>
-    For more information see <a href="txt/x11fwd.adv">the advisory</a>.
+    For more information see <a href="https://www.openssh.com/txt/x11fwd.adv">the advisory</a>.
     <br>
     This bug is corrected in OpenSSH 7.2p2 and in OpenBSD's stable branch.
     For more information, please
-    refer to the <a href="txt/release-7.2p2">release notes</a>.
+    refer to the <a href="https://www.openssh.com/txt/release-7.2p2">release notes</a>.
 
-<li><p><b>January 14, 2016</b><br>
+<li><p><b>14 января 2016</b><br>
     OpenSSH clients between versions 5.4 and 7.1 are vulnerable to
     information disclosure that may allow a malicious server to retrieve
     information including under some circumstances, user's private keys.
@@ -71,9 +72,9 @@ For more information, see the
     >CVE-2016-0778</a>. <br>
     This bug is corrected in OpenSSH 7.1p2 and in OpenBSD's stable branch.
     For more information, please
-    refer to the <a href="txt/release-7.1p2">release notes</a>.
+    refer to the <a href="https://www.openssh.com/txt/release-7.1p2">release notes</a>.
 
-<li><p><b>August 21, 2015</b><br>
+<li><p><b>21 августа 2015</b><br>
     OpenSSH 7.0 contained a logic error in PermitRootLogin=
     prohibit-password/without-password that could, depending on
     compile-time configuration, permit password authentication to
@@ -82,7 +83,7 @@ For more information, see the
     refer to the <a href="https://www.openssh.com/txt/release-7.1">release
     notes</a>
 
-<li><p><b>August 11, 2015</b><br>
+<li><p><b>11 августа 2015</b><br>
     OpenSSH 6.7 through 6.9 assign weak permissions to TTY devices.<br>
     Keyboard-interactive authentication in OpenSSH prior to 7.0 may
     allow circumvention of MaxAuthTries.<br>
@@ -90,35 +91,35 @@ For more information, see the
     refer to the <a href="https://www.openssh.com/txt/release-7.0">release
     notes</a>
 
-<li><p><b>June 30, 2015</b><br>
+<li><p><b>30 июня 2015</b><br>
     OpenSSH prior to 6.9 suffered from a race condition that could allow
     non-trusted X11 forwarding sessions to be treated as trusted.
     For more information, please
     refer to the <a href="https://www.openssh.com/txt/release-6.9">release
     notes</a>
 
-<li><p><b>November 8, 2013:</b><br>
+<li><p><b>8 ноября 2013:</b><br>
     OpenSSH versions 6.2 and 6.3 are vulnerable to the memory corruption
     problem described in the
     <a href="https://www.openssh.com/txt/gcmrekey.adv">gcmrekey.adv</a> advisory
     and the
     <a href="https://www.openssh.com/txt/release-6.4">OpenSSH 6.4 release notes</a>.
 
-<li><p><b>February 2, 2011:</b><br>
+<li><p><b>2 февраля 2011:</b><br>
     Portable OpenSSH prior to version 5.8p2 is vulnerable to the local
     host key theft attack described in
     <a href="https://www.openssh.com/txt/portable-keysign-rand-helper.adv">portable-keysign-rand-helper.adv</a> advisory
     and the
     <a href="https://www.openssh.com/txt/release-5.8p2">OpenSSH 5.8p2 release notes</a>.
 
-<li><p><b>January 24, 2011:</b><br>
+<li><p><b>24 января 2011:</b><br>
     OpenSSH versions 5.6 and 5.7 are vulnerable to a potential leak of
     private key data described in the
     <a href="https://www.openssh.com/txt/legacy-cert.adv">legacy-cert.adv</a> advisory
     and the
     <a href="https://www.openssh.com/txt/release-5.8">OpenSSH 5.8 release notes</a>.
 
-<li><p><b>February 23, 2009:</b><br>
+<li><p><b>23 февраля 2009:</b><br>
     OpenSSH prior to version 5.2 is vulnerable to the protocol
      weakness described in
     <a href="http://www.cpni.gov.uk/Docs/Vulnerability_Advisory_SSH.txt">CPNI-957037 "Plaintext Recovery Attack Against SSH"</a>.
@@ -129,30 +130,30 @@ For more information, see the
     and the
     <a href="https://www.openssh.com/txt/release-5.2">OpenSSH 5.2 release notes</a>.
 
-<li><p><b>July 22, 2008:</b><br>
+<li><p><b>22 июля 2008:</b><br>
     Portable OpenSSH 5.1 and newer are not vulnerable to the X11UseLocalhost=no hijacking attack
     on HP/UX (and possibly other systems) described in the
     <a href="https://www.openssh.com/txt/release-5.1">OpenSSH 5.1 release notes</a>.
 
-<li><p><b>April 3, 2008:</b><br>
+<li><p><b>3 апреля 2008:</b><br>
     OpenSSH 5.0 and newer are not vulnerable to the X11 hijacking attack
     described in
     <a href="http://cve.mitre.org/cgi-bin/cvename.cgi?name=CVE-2008-1483">CVE-2008-1483</a> and the
     <a href="https://www.openssh.com/txt/release-5.0">OpenSSH 5.0 release notes</a>.
 
-<li><p><b>March 31, 2008:</b><br>
+<li><p><b>31 марта 2008:</b><br>
     OpenSSH 4.9 and newer do not execute ~/.ssh/rc for sessions whose command
     has been overridden with a sshd_config(5) <em>ForceCommand</em> directive.
     This was a documented, but unsafe behaviour (described in
     <a href="https://www.openssh.com/txt/release-4.9">OpenSSH 4.9 release notes</a>).
 
-<li><p><b>September 5, 2007:</b><br>
+<li><p><b>5 сентября 2007:</b><br>
     OpenSSH 4.7 and newer do not fall back to creating trusted X11
     authentication cookies when untrusted cookie generation fails (e.g. due to
     deliberate resource exhaustion), as described in the
     <a href="https://www.openssh.com/txt/release-4.7">OpenSSH 4.7 release notes</a>.
 
-<li><p><b>November 7, 2006:</b><br>
+<li><p><b>7 ноября 2006:</b><br>
     OpenSSH 4.5 and newer fix a weakness in the privilege separation monitor
     that could be used to spoof successful authentication (described in the
     <a href="https://www.openssh.com/txt/release-4.5">OpenSSH 4.5 release notes</a>).
@@ -160,52 +161,52 @@ For more information, see the
     have already subverted the network-facing sshd(8) process, and no
     vulnerabilities permitting this are known.
 
-<li><p><b>September 27, 2006:</b><br>
+<li><p><b>27 сентября 2006:</b><br>
     OpenSSH 4.4 and newer is not vulnerable to the unsafe signal handler
     vulnerability described in the
     <a href="https://www.openssh.com/txt/release-4.4">OpenSSH 4.4 release notes</a>.
 
-<li><p><b>September 27, 2006:</b><br>
+<li><p><b>27 сентября 2006:</b><br>
     OpenSSH 4.4 and newer is not vulnerable to the SSH protocol 1 denial of
     service attack described in the
     <a href="https://www.openssh.com/txt/release-4.4">OpenSSH 4.4 release notes</a>.
 
-<li><p><b>February 1, 2006:</b><br>
+<li><p><b>1 февряля 2006:</b><br>
     OpenSSH 4.3 and newer are not vulnerable to shell metacharacter expansion
     in scp(1) local-local and remote-remote copies
     (<a href="http://cve.mitre.org/cgi-bin/cvename.cgi?name=CVE-2006-0225">CVE-2006-0225</a>), as described in the
     <a href="https://www.openssh.com/txt/release-4.3">OpenSSH 4.3 release notes</a>.
 
-<li><p><b>September 1, 2005:</b><br>
+<li><p><b>1 сентября 2005:</b><br>
     OpenSSH 4.2 and newer does not allow delegation of GSSAPI credentials
     after authentication using a non-GSSAPI method as described in the
     <a href="https://www.openssh.com/txt/release-4.2">OpenSSH 4.2 release notes</a>.
 
-<li><p><b>September 1, 2005:</b><br>
+<li><p><b>1 сентября 2005:</b><br>
     OpenSSH 4.2 and newer do not incorrectly activate GatewayPorts for
     dynamic forwardings (bug introduced in OpenSSH 4.0) as described in the
     <a href="https://www.openssh.com/txt/release-4.2">OpenSSH 4.2 release notes</a>.
 
-<li><p><b>September 16, 2003:</b><br>
+<li><p><b>16 сентября 2003:</b><br>
     Portable OpenSSH 3.7.1p2 and newer are not vulnerable to
     "September 23, 2003: Portable OpenSSH Multiple PAM vulnerabilities",
     <a href="https://www.openssh.com/txt/sshpam.adv">OpenSSH
     Security Advisory</a>. (This issue does not affect OpenBSD versions)
 
-<li><p><b>September 16, 2003:</b><br>
+<li><p><b>16 сентября 2003:</b><br>
     OpenSSH 3.7.1 and newer are not vulnerable to
     "September 16, 2003: OpenSSH Buffer Management bug",
     <a href="https://www.openssh.com/txt/buffer.adv">OpenSSH
     Security Advisory</a> and CERT Advisory
     <a href="http://www.cert.org/advisories/CA-2003-24.html">CA-2003-24</a>.
 
-<li><p><b>June 26, 2002:</b><br>
+<li><p><b>26 июня 2002:</b><br>
     OpenSSH 3.4 and newer are not vulnerable to
     "June 26, 2002: OpenSSH Remote Challenge Vulnerability",
     <a href="https://www.openssh.com/txt/preauth.adv">OpenSSH
     Security Advisory</a>.
 
-<li><p><b>March 29, 2002:</b><br>
+<li><p><b>29 марта 2002:</b><br>
     OpenSSH 3.2.1 and newer are not vulnerable to
     "April 21, 2002: Buffer overflow in AFS/Kerberos token passing code",
     <a href="https://www.openbsd.org/advisories/ssh_afstoken.txt">OpenSSH
@@ -214,32 +215,32 @@ For more information, see the
     AFS/Kerberos token passing is compiled in and enabled (either
     in the system or in sshd_config).
 
-<li><p><b>March 7, 2002:</b><br>
+<li><p><b>7 марта 2002:</b><br>
     OpenSSH 3.1 and newer are not vulnerable to
     "March 7, 2002: Off-by-one error in the channel code",
     <a href="https://www.openbsd.org/advisories/ssh_channelalloc.txt">OpenSSH
     Security Advisory</a>.
 
-<li><p><b>November 24, 2001:</b><br>
+<li><p><b>24 ноября 2001:</b><br>
     OpenSSH 3.0.2 and newer do not
     allow users to <a href="http://www.kb.cert.org/vuls/id/157447">
     pass environment variables to login(1) if UseLogin is enabled</a>.
     The UseLogin option is disabled by default in all OpenSSH releases.
 
-<li><p><b>May 21, 2001:</b><br>
+<li><p><b>21 мая 2001:</b><br>
     OpenSSH 2.9.9 and newer are not vulnerable to
     "Sep 26, 2001: Weakness in OpenSSH's source IP based access control
     for SSH protocol v2 public key authentication.",
     <a href="https://www.openbsd.org/advisories/ssh_option.txt">OpenSSH
     Security Advisory</a>.
 
-<li><p><b>May 21, 2001:</b><br>
+<li><p><b>21 мая 2001:</b><br>
     OpenSSH 2.9.9 and newer do not
     allow users to <a href="http://www.kb.cert.org/vuls/id/655259">
     delete files named "cookies" if X11 forwarding is enabled</a>.
     X11 forwarding is disabled by default.
 
-<li><p><b>November 6, 2000:</b><br>
+<li><p><b>6 ноября 2000:</b><br>
     OpenSSH 2.3.1, a development snapshot which was never released, was
     vulnerable to
     "Feb 8, 2001: Authentication By-Pass Vulnerability in OpenSSH-2.3.1",
@@ -251,13 +252,13 @@ For more information, see the
     OpenSSH 2.3.0 and versions newer than 2.3.1 are not vulnerable to
     this problem.
 
-<li><p><b>November 6, 2000:</b><br>
+<li><p><b>6 ноября 2000:</b><br>
     OpenSSH 2.3.0 and newer do not allow
     <a href="http://www.kb.cert.org/vuls/id/363181">
     malicious servers to access the client's X11 display or ssh-agent</a>.
     This problem has been fixed in OpenSSH 2.3.0.
 
-<li><p><b>November 6, 2000:</b><br>
+<li><p><b>6 ноября 2000:</b><br>
     OpenSSH 2.3.0 and newer are not vulnerable to the
     "Feb 8, 2001: SSH-1 Daemon CRC32 Compensation Attack Detector Vulnerability",
     <a href="http://razor.bindview.com/publish/advisories/adv_ssh1crc.html">RAZOR Bindview Advisory CAN-2001-0144</a>.
@@ -265,7 +266,7 @@ For more information, see the
     lead to remote root access.  This problem has been fixed in
     OpenSSH 2.3.0.  However, versions prior to 2.3.0 are vulnerable.
 
-<li><p><b>September 2, 2000:</b><br>
+<li><p><b>2 сентября 2000:</b><br>
     OpenSSH 2.2.0 and newer are not vulnerable to the
     "Feb 7, 2001: SSH-1 Session Key Recovery Vulnerability",
     CORE-SDI Advisory CORE-20010116.  OpenSSH imposes limits on the
@@ -273,7 +274,7 @@ For more information, see the
     Bleichenbacher oracle has been closed completely since January 29,
     2001.
 
-<li><p><b>June 8, 2000:</b><br>
+<li><p><b>8 июня 2000:</b><br>
     OpenSSH 2.1.1 and newer do not allow a remote attacker to
     <a href="http://www.kb.cert.org/vuls/id/40327">
     execute arbitrary commands with the privileges of sshd if UseLogin</a>
