[1.63] better wording - openssh/security.html

--- a/openssh/security.html
+++ b/openssh/security.html
@@ -22,7 +22,7 @@ li {
 <hr>
 
 <p>
-OpenSSH разрабатывается по тем же принципам и с требованиями к
+OpenSSH разрабатывается по тем же принципам и требованиям к
 безопасности, которыми так славится OpenBSD. Если вы хотите сообщить
 об ошибке, отправьте письмо в private рассылку разработчиков
  &lt;<a href="mailto:openssh@openssh.com">openssh@openssh.com</a>&gt;.
